# pygraz-traefik

./: .env  .gitignore  README.md  docker-compose.prod-proxy.yml  docker-compose.prod.yml  docker-compose.yml
presentation/: pres.odp
pygraz-server/: Dockerfile  pyproject.toml  run.py
pygraz-server/pygraz/: main.py  run.py
