[tool.poetry]
name = "pygraz-server"
version = "0.1.0"
description = ""
authors = ["Christoph Reiter <reiter.christoph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
httpx = {extras = ["http2"], version = "^0.20.0"}
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
